fix(bug): правит цвет шрифта в поиске элемент __cta-subtitle

--- a/src/scss/blocks/common/search-modal.scss
+++ b/src/scss/blocks/common/search-modal.scss
@@ -188,7 +188,7 @@
 
   &__cta-subtitle {
     grid-area: subtitle;
-    color: $base;
+    color: $grey;
     font-size: 12px;
     line-height: 140%;
   }
