--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -524,3 +524,19 @@
     display: none;
   }
 }
+
+.header__search-modal--opened {
+  @include vp-desktop {
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      background-color: $border-fill;
+      z-index: 2;
+    }
+  }
+}
