--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -14,8 +14,8 @@
     background-image: url("/images/edge-bg.svg");
     background-size: cover;
     background-repeat: repeat;
-    background-position: center;
-    top: -14px;
+    background-position: top;
+    top: -27px;
     left: 0;
   }
 
