--- a/src/scss/blocks/catalog/catalog-block.scss
+++ b/src/scss/blocks/catalog/catalog-block.scss
@@ -167,8 +167,8 @@
     //background-color: $border-fill;
     background-color: $white;
 
-    padding-top: 1px;
-    padding-bottom: 1px;
+    //padding-top: 1px;
+    //padding-bottom: 1px;
 
     margin-bottom: 40px;
 
