fix(bug): правит шрифт в кнопке search-modal

--- a/src/scss/blocks/common/search-modal.scss
+++ b/src/scss/blocks/common/search-modal.scss
@@ -294,6 +294,9 @@
   }
 
   &__nothing-callback {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
     min-width: 160px;
   }
 
