--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -20,6 +20,7 @@ $border-fill: #e2e3e5;
 $border-fill-dark: #cecfd1;
 $base: #111111;
 $grey: #727272;
+$line-fill: #ecedef;
 
 // colors default
 $white: #ffffff;
