--- a/src/scss/blocks/common/contact-form.scss
+++ b/src/scss/blocks/common/contact-form.scss
@@ -2,7 +2,8 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  @include scrollbar;
+  overflow-y: auto;
 }
 
 .contact-form__title {
@@ -42,7 +43,20 @@ textarea.contact-form__input {
   padding: 13px;
   margin-top: 16px;
   margin-bottom: 16px;
+
+  font-weight: 500;
   font-size: 15px;
+  line-height: 18px;
+
+  @include vp-tablet {
+    font-size: 16px;
+    line-height: 19px;
+  }
+
+  @include vp-tablet-landscape {
+    font-size: 15px;
+    line-height: 18px;
+  }
 }
 
 .contact-form__privacy {
@@ -51,8 +65,13 @@ textarea.contact-form__input {
   align-items: flex-start;
   gap: 10px;
   color: $base;
+  font-weight: 300;
   font-size: 12px;
   line-height: 140%;
+
+  span:not(.contact-form__privacy-indicator){
+    align-self: center;
+  }
 
   a {
     color: inherit;
