--- a/src/scss/blocks/common/popup.scss
+++ b/src/scss/blocks/common/popup.scss
@@ -13,6 +13,26 @@
   }
 }
 
+.popup.callback-popup {
+  @include vp-tablet-landscape {
+    .popup__title {
+      display: none;
+    }
+
+    .popup__header {
+      padding-bottom: 0;
+    }
+
+    .contact-form__title {
+      margin-top: 0;
+    }
+
+    .popup__close {
+      margin-left: auto;
+    }
+  }
+}
+
 .popup--opened {
   z-index: 4;
   display: flex;
@@ -29,10 +49,6 @@
   @include vp-tablet-landscape {
     justify-content: flex-end;
   }
-}
-
-.popup--form-left {
-
 }
 
 .popup--form-left.popup--opened {
@@ -78,7 +94,7 @@
   box-sizing: border-box;
 
   @include vp-tablet-landscape {
-    padding: 18px 30px;
+    padding: 30px 30px;
     max-width: 430px;
   }
 
@@ -106,30 +122,57 @@
 }
 
 .popup__header {
+  position: relative;
   flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-bottom: 18px;
 
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: $line-fill;
+
+    box-shadow: -18px 0 $line-fill, 18px 0 $line-fill;
+  }
+
   @include vp-tablet-landscape {
     align-items: flex-end;
     padding-bottom: 13px;
+
+    &::after {
+      content: "";
+      display: none;
+    }
   }
 }
 
 .popup__title {
-  font-size: 16px;
-  font-weight: 600;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  color: $base;
+
   margin-left: auto;
   margin-right: auto;
+  align-self: center;
 
   @include vp-tablet {
-    font-size: 18px;
+    font-size: 24px;
+    line-height: 28px;
   }
 
   @include vp-tablet-landscape {
-    font-size: 22px;
+    font-size: 26px;
+    line-height: 140%;
+
     margin: 0;
   }
 }
@@ -139,8 +182,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 36px;
-  height: 36px;
+  width: 48px;
+  height: 48px;
   color: $base;
   border-radius: 8px;
   border: none;
@@ -148,8 +191,8 @@
   transition: all 0.3s ease-in-out;
 
   svg {
-    width: 24px;
-    height: 24px;
+    width: 25px;
+    height: 25px;
     transform: rotate(45deg);
   }
 
