--- a/src/scss/blocks/common/search-modal.scss
+++ b/src/scss/blocks/common/search-modal.scss
@@ -112,6 +112,7 @@
     align-content: center;
     gap: 0 $indent;
     transition: $trans-default;
+    border-radius: 8px;
 
     &:active {
       opacity: 0.6;
