--- a/src/scss/blocks/product/composition.scss
+++ b/src/scss/blocks/product/composition.scss
@@ -57,7 +57,7 @@
     }
 
     @include vp-tablet-landscape {
-      position: sticky;
+      //position: sticky;
       top: 164px;
       z-index: 2;
       padding: 40px 25px 35px;
