--- a/src/scss/blocks/common/certificates.scss
+++ b/src/scss/blocks/common/certificates.scss
@@ -65,7 +65,6 @@
 
     @include vp-tablet-landscape {
       flex-direction: row;
-      //gap: 20px;
       width: 100%;
     }
 
@@ -195,22 +194,34 @@
     left: 60%;
     top: 50%;
     display: flex;
-    width: 23.204%;
-    max-width: 142px;
+    width: 26.456%;
+    height: 34.683%;
     cursor: pointer;
     padding: 0;
     margin: 0;
     user-select: none;
-    height: fit-content;
     border-radius: 50%;
     border: none;
     background-color: $transparent;
+    justify-content: center;
+    align-items: center;
+
+    @include vp-tablet {
+      width: 21.516%;
+      height: 35.751%;
+    };
+
+    @include vp-tablet-landscape {
+      width: 23.203%;
+      height: 35.751%;
+    }
 
     &::after {
       content: "";
+      position: absolute;
       display: block;
-      width: 142px;
-      height: 142px;
+      width: 100%;
+      height: 100%;
 
       background-image: url("/images/certificate-btn-bg.svg");
       background-size: contain;
@@ -218,7 +229,6 @@
       background-position: center;
 
       animation: rotateAnimation 7s linear infinite;
-
 
       @keyframes rotateAnimation {
         from {
@@ -230,78 +240,43 @@
       }
     }
 
-    &::before {
-      position: absolute;
-      content: "";
-      display: block;
-      width: 40px;
-      height: 40px;
-      right: 0;
-      left: 0;
-      margin: 0 auto;
-      margin-top: -20px;
-      top: 50%;
-      z-index: 2;
-
-      background-image: url("/images/icon-hand.svg");
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-
+    span {
+      width: 46.5%;
+      height: 46.5%;
       background-color: rgba($white, 0.6);
+      z-index: 2;
       border-radius: 50%;
+
+      &::before {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        right: 0;
+        left: 0;
+        margin: 0 auto;
+
+        background-image: url("/images/icon-hand.svg");
+        background-size: 61%;
+        background-repeat: no-repeat;
+        background-position: center;
+        border-radius: 50%;
+
+        transition: background-size $trans-default;
+      }
+    }
+
+    @include hover-focus {
+
+      &::after {
+        animation-play-state: paused;
+      }
+
+      span {
+        &::before {
+          background-size: 70%;
+        }
+      };
     }
   }
-
-  /*&__image-btn-item{
-
-    &::after {
-      content: "";
-      display: block;
-      width: 40px;
-      height: 40px;
-
-      background-image: url("/images/icon-hand.svg");
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-  }*/
-
-  // кнопка текст
-  // ----------------
-  /*
-  &__image-link {
-    display: block;
-    max-width: fit-content;
-  }
-
-  &__link-button {
-    display: grid;
-    width: 142px;
-    height: 142px;
-    background-color: $accent-bg-items-hover;
-    border-radius: 50%;
-
-    .circle {
-      font-style: normal;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 140%;
-      text-transform: uppercase;
-      place-self: center;
-      padding-top: 0.56em;
-      padding-left: 0.56em;
-
-      display: grid;
-      overflow: visible;
-      width: 100px;
-      fill: $base;
-    }
-
-    .circle path {
-        fill: none;
-        place-self: center;
-    }
-  }*/
 }
