--- a/src/components/blocks/index/intro.pug
+++ b/src/components/blocks/index/intro.pug
@@ -40,7 +40,7 @@ mixin intro()
 
               - const tag = option.tagName ? option.tagName : "h2";
 
-              .swiper-slide
+              .swiper-slide.intro__slide
                 .intro__card
                   .intro__card-context
 
