--- a/src/scss/blocks/index/intro.scss
+++ b/src/scss/blocks/index/intro.scss
@@ -9,7 +9,12 @@
     padding-left: 0;
   }
 
+  &__slide {
+    height: auto !important;
+  }
+
   &__card {
+    height: 100%;
     display: flex;
     flex-direction: column;
 
