--- a/src/scss/ui/catalog-card.scss
+++ b/src/scss/ui/catalog-card.scss
@@ -60,6 +60,7 @@
     border-top: 1px solid $border-fill;
     padding-top: 24px;
     margin-bottom: 24px;
+    flex-wrap: wrap;
 
     b, i {
       font-style: normal;
