--- a/src/scss/ui/catalog-card.scss
+++ b/src/scss/ui/catalog-card.scss
@@ -57,6 +57,7 @@
   &__data-add {
     display: flex;
     justify-content: space-between;
+    gap: 5px;
     border-top: 1px solid $border-fill;
     padding-top: 24px;
     margin-bottom: 24px;
@@ -74,6 +75,13 @@
       font-weight: 400;
       color: $secondary;
     }
+  }
+
+  &__price-weight {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
   }
 
   &__buttons-wrapper {
