--- a/src/scss/ui/catalog-card.scss
+++ b/src/scss/ui/catalog-card.scss
@@ -41,7 +41,9 @@
     font-size: 12px;
     line-height: 118%;
     color: $secondary;
-    margin-bottom: 24px;
+    //margin-bottom: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid $border-fill;
 
     strong {
       font-weight: 500;
@@ -52,16 +54,17 @@
   &__container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    //justify-content: space-between;
   }
 
   &__data-add {
     display: flex;
     justify-content: space-between;
     gap: 5px;
-    border-top: 1px solid $border-fill;
+    //border-top: 1px solid $border-fill;
     padding-top: 24px;
     margin-bottom: 24px;
+    margin-top: auto;
     flex-wrap: wrap;
 
     b, i {
@@ -87,7 +90,7 @@
 
   &__buttons-wrapper {
     display: flex;
-    margin-top: auto;
+    //margin-top: auto;
 
     gap: 10px;
   }
