--- a/src/scss/blocks/catalog/catalog-block.scss
+++ b/src/scss/blocks/catalog/catalog-block.scss
@@ -73,6 +73,9 @@
     }
 
     // Стили фильтров
+    .bapf_body ul li ul {
+      margin-top: 5px;
+    }
 
     .bapf_slidr_all {
       display: grid;
